# nadja-senses

./: README.md  pyproject.toml
algebra/: nmf.py  pheromones.py  receptors.py
core/: backcast.py  homeostasis.py  levers.py  lexicon.py  location.py  metaphor.py  nmf_algebra.py  ommatidia.py  recognition.py  reflex.py  self.py  synesthesia.py
docs/: systemviz_sensory_map.md
edge/: compound_eye.py  echolocation.py  lateral_line.py  shiver_protocol.py  stress.py
gallery/: archetypes.py  inscriber.py  typography.py
gallery/thinkers/: lenses.py
interior/: acoustic.py  chronos.py  distance.py  gnarl.py  gustatory.py  haptic.py  homophone.py  magneto.py  metabolic.py  proprioception.py  safety.py  thriving.py  vestibular.py
synapses/: correlator.py  topology.py
